--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/pickers": "^3.1.1",
     "@material-ui/styles": "^4.0.2",
+    "axios": "^0.19.0",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.1"
   },
   "scripts": {
